--- a/config.yaml
+++ b/config.yaml
@@ -1,40 +1,43 @@
-# -------------------------------------------
+#############################################
 # LIFEsim 2 Configuration File
 # -------------------------------------------
+# For documentation see:
+# https://github.com/pahuber/LIFEsim2
+#############################################
 ---
-# ----------------------------------
+# -------------------------------------------
 # Simulation Configuration
-# ----------------------------------
+# -------------------------------------------
 simulation:
   grid_size: 100
   time_step: 10 min
-# ----------------------------------
+# -------------------------------------------
 # Observation Configuration
-# ----------------------------------
+# -------------------------------------------
 observation:
-  adjust_baseline: true
-  field_of_view: 0.4 arcsec
+  adjust_baseline_to_habitable_zone: true
+  adjust_baseline_to_planet: false
   integration_time: 1 d
-  modulation_period: 1 d
   optimized_wavelength: 10 um
-# ----------------------------------
+# -------------------------------------------
 # Observatory Configuration
-# ----------------------------------
+# -------------------------------------------
 observatory:
   array_configuration:
     type: emma-x-circular-rotation
     baseline_maximum: 600 m
     baseline_minimum: 12 m
     baseline_ratio: 6
+    modulation_period: 1 d
   beam_combination_scheme: double-bracewell
   instrument_parameters:
     aperture_diameter: 4 m
     spectral_range_lower_limit: 4 um
     spectral_range_upper_limit: 18 um
     spectral_resolution: 100
-# ----------------------------------
+# -------------------------------------------
 # Source Configuration
-# ----------------------------------
+# -------------------------------------------
 source:
   planet:
     planet_mass: 1 Mearth
