--- a/planetary_system.yaml
+++ b/planetary_system.yaml
@@ -4,11 +4,19 @@
 ---
 planets:
   planet_1:
+    planet_label: Earth
+    planet_mass: 1 Mearth
+    planet_radius: 1 Rearth
+    planet_star_separation: 1 au
+    planet_temperature: 230 K
+  planet_2:
+    planet_label: Mars
     planet_mass: 1 Mearth
     planet_radius: 1 Rearth
     planet_star_separation: 1 au
     planet_temperature: 230 K
 star:
+  star_label: Sun
   star_distance: 10 pc
   star_mass: 1 Msun
   star_radius: 1 Rsun
