Update config file

--- a/planetary_system.yaml
+++ b/planetary_system.yaml
@@ -4,21 +4,21 @@
 ---
 planets:
   planet_1:
-    planet_label: Earth
-    planet_mass: 1 Mearth
-    planet_radius: 1 Rearth
-    planet_star_separation: 1 au
-    planet_temperature: 300 K
+    name: Earth
+    mass: 1 Mearth
+    radius: 1 Rearth
+    star_separation: 1 au
+    temperature: 300 K
   planet_2:
-    planet_label: Mars
-    planet_mass: 1 Mearth
-    planet_radius: 1 Rearth
-    planet_star_separation: 1 au
-    planet_temperature: 300 K
+    name: Mars
+    mass: 0.3 Mearth
+    radius: 0.3 Rearth
+    star_separation: 2 au
+    temperature: 200 K
 star:
-  star_label: Sun
-  star_distance: 10 pc
-  star_mass: 1 Msun
-  star_radius: 1 Rsun
-  star_temperature: 5700 K
+  name: Sun
+  distance: 10 pc
+  mass: 1 Msun
+  radius: 1 Rsun
+  temperature: 5700 K
 ...
