Add Validators to config files

--- a/examples/single_observation_planetary_system/config.yaml
+++ b/examples/single_observation_planetary_system/config.yaml
@@ -33,7 +33,12 @@ observatory:
     aperture_diameter: 4 m
     wavelength_range_lower_limit: 4 um
     wavelength_range_upper_limit: 18 um
-    spectral_resolving_power: 10
+    spectral_resolving_power: '10'
+    bla:
+      aperture_diameter: 4 m
+      wavelength_range_lower_limit: 4 um
+      wavelength_range_upper_limit: 18 um
+      spectral_resolving_power: '10'
 # -------------------------------------------
 # Noise Configuration
 # -------------------------------------------
