Fix time range calculation

--- a/examples/single_observation_planetary_system/config.yaml
+++ b/examples/single_observation_planetary_system/config.yaml
@@ -27,7 +27,7 @@ observatory:
     baseline_maximum: 600 m
     baseline_minimum: 8 m
     baseline_ratio: 6
-    modulation_period: 1 d
+    modulation_period: 8 h
   beam_combination_scheme: double-bracewell
   instrument_parameters:
     aperture_diameter: 4 m
