--- a/examples/single_observation_planetary_system/config.yaml
+++ b/examples/single_observation_planetary_system/config.yaml
@@ -17,18 +17,18 @@ simulation:
 observation:
   adjust_baseline_to_habitable_zone: true
   integration_time: 1 d
-  optimized_wavelength: 18 um
+  optimized_wavelength: 10 um
 # -------------------------------------------
 # Observatory Configuration
 # -------------------------------------------
 observatory:
   array_configuration:
-    type: regular-pentagon-circular-rotation
+    type: emma-x-circular-rotation
     baseline_maximum: 600 m
     baseline_minimum: 8 m
     baseline_ratio: 6
     modulation_period: 1 d
-  beam_combination_scheme: kernel-5
+  beam_combination_scheme: double-bracewell
   instrument_parameters:
     aperture_diameter: 4 m
     wavelength_range_lower_limit: 4 um
