--- a/examples/single_observation_planetary_system/config.yaml
+++ b/examples/single_observation_planetary_system/config.yaml
@@ -15,7 +15,7 @@ simulation:
     stellar_leakage: true
     local_zodi_leakage: false
     exozodi_leakage: false
-    fiber_injection_variability: true
+    fiber_injection_variability: false
     optical_path_difference_variability: true
 # -------------------------------------------
 # Observation Configuration
