--- a/examples/single_observation_planetary_system/planetary_system.yaml
+++ b/examples/single_observation_planetary_system/planetary_system.yaml
@@ -1,6 +1,6 @@
-#############################################
-# LIFEsim 2 Planetary System File
-#############################################
+###############################################
+# LIFEsim 2 Planetary System Configuration File
+###############################################
 ---
 star:
   name: Sun
