--- a/examples/single_observation_planetary_system/config.yaml
+++ b/examples/single_observation_planetary_system/config.yaml
@@ -13,8 +13,8 @@ settings:
   time_step: 1 d
   planet_orbital_motion: false
   noise_contributions:
-    stellar_leakage: true
-    local_zodi_leakage: true
+    stellar_leakage: false
+    local_zodi_leakage: false
     exozodi_leakage: false
     fiber_injection_variability: false
     optical_path_difference_variability:
