Update config file

--- a/examples/single_observation_planetary_system/config.yaml
+++ b/examples/single_observation_planetary_system/config.yaml
@@ -13,7 +13,7 @@ settings:
   time_steps: 100
   planet_orbital_motion: false
   noise_contributions:
-    stellar_leakage: false
+    stellar_leakage: true
     local_zodi_leakage: false
     exozodi_leakage: false
     fiber_injection_variability: false
